...
                    maxLines = 1,
                    overflow = TextOverflow.Ellipsis,
                    modifier = Modifier.weight(1f)
                )
                IconButton(
                    onClick = onMapClick,
                    modifier = Modifier.size(24.dp).testTag("dashboard_open_map_btn")
                ) {
                    Icon(
                        painter = painterResource(R.drawable.ic_map),
                        contentDescription = stringResource(R.string.action_open_map),
                        tint = MaterialTheme.colorScheme.primary,
                        modifier = Modifier.size(20.dp)
...
