...
                destQuery = it
                destFocused = true
            },
            placeholder = { Text(placeholder) },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("dashboard_search_field")
                .focusRequester(focusRequester)
                .onFocusChanged {
                    destFocused = it.isFocused
                }
                .onSizeChanged { destFieldHeight = it.height },
            shape = RoundedCornerShape(24.dp),
...
                                        latitude = it.latitude,
                                        longitude = it.longitude
                                    )
                                }
                            )
                        },
                        modifier = Modifier.testTag("dashboard_open_routes_btn")
                    ) {
                        Icon(
                            painter = painterResource(R.drawable.ic_directions),
                            contentDescription = stringResource(R.string.action_open_routes),
                            tint = MaterialTheme.colorScheme.primary
                        )
...
