appId: fr.geoking.gaston
tags:
  - smoke
  - dashboard
---
- launchApp:
    permissions:
      all: allow
- runFlow: common/prepare.yaml
- assertVisible: "Gaston"
- assertVisible:
    id: "dashboard_search_field"
- tapOn:
    id: "dashboard_search_field"
- inputText: "Paris"
- waitForAnimationEnd
- assertVisible: "Paris, France"
- tapOn: "Paris, France"
- assertVisible: "Cheapest near Paris"
- tapOn:
    id: "mode_ev"
- assertVisible: "Nearest charging near Paris"
- tapOn:
    id: "mode_fuel"
- assertVisible: "Cheapest fuel near Paris"
