appId: fr.geoking.gaston
tags:
  - smoke
  - ci
  - network
---
- launchApp:
    permissions:
      all: allow
- runFlow: common/prepare.yaml
- scrollUntilVisible:
    element:
      id: "dashboard_network_btn"
- tapOn:
    id: "dashboard_network_btn"
- assertVisible: "Connectivity & location"
- assertVisible: "Current location"
- back
- assertVisible:
    id: "dashboard_search_field"
