appId: fr.geoking.gaston
tags:
  - smoke
  - ci
  - settings
---
- launchApp:
    permissions:
      all: allow
- runFlow: common/prepare.yaml
- tapOn:
    id: "dashboard_settings_btn"
- assertVisible: "Settings"
- back
- assertVisible:
    id: "dashboard_search_field"
