appId: fr.geoking.gaston
---
- launchApp
- tapOn:
    id: "dashboard_open_map_btn"
- assertVisible: "Gas Stations"
- tapOn:
    id: "map_search_input"
- inputText: "Freshmile"
- assertVisible: "Freshmile"
- back
