appId: fr.geoking.gaston
tags:
  - smoke
  - ci
  - routes
---
- launchApp:
    permissions:
      all: allow
- runFlow: common/prepare.yaml
- tapOn:
    id: "dashboard_open_routes_btn"
- assertVisible: "Plan route"
- assertVisible: "Origin"
- assertVisible: "Destination"
- back
- assertVisible:
    id: "dashboard_open_routes_btn"
